# Assist-ER

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: README.md
gui/: README.md  neutralino.config.json
gui/assets/: icon-placeholder.txt
gui/src/: app.js  index.html  styles.css
pages/: README.md
pages/site/: index.html
pages/site/.github/workflows/: pages.yml
pages/site/assets/: styles.css
plugins/: README.md
scripts/: seed_example.py
src/assist_er/: __init__.py  api.py  cli.py  config.py  github_client.py  local_repo.py  models.py  services.py  triage.py  workflow_generator.py
src/assist_er/pro/: models.py  service.py
src/assist_er/pro/core/ai/: codegen.py  conflict_resolver.py  reviewer.py
src/assist_er/pro/core/api/: graphql.py  pagination.py  rest.py
src/assist_er/pro/core/auth/: manager.py  token_store.py
src/assist_er/pro/core/branches/: __init__.py
src/assist_er/pro/core/prs/: __init__.py
src/assist_er/pro/core/repos/: branch_manager.py  pr_manager.py  repository_manager.py  triage_engine.py  workflow_manager.py
src/assist_er/pro/core/utils/: __init__.py  event_logger.py  gui_bridge.py  (+2 more)
src/assist_er/pro/plugins/: custom_automation.py  dependabot_helper.py  pages_helper.py
src/assist_er/pro/schemas/: prepare.schema.json  triage.schema.json
src/assist_er/pro/templates/: dependabot.yml  pages_index.html  pro_maintenance.yml
tests/: test_api.py  test_triage.py  test_workflow_generator.py
tests/pro/: test_ai_codegen.py  test_budget_cli_compat.py  test_pagination.py  test_token_store.py  test_work_command.py
(+1 files in other folders)
