[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assist-er"
version = "1.0.0"
description = "Production-grade GitHub repository automation assistant"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Assist-ER"}]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "typer>=0.12.3,<1.0.0",
  "rich>=13.7.0,<14.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "types-PyYAML>=6.0.12,<7.0.0",
]

[project.scripts]
assist-er = "assist_er.cli:app"
assist-er-api = "assist_er.api:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["assist_er"]
